2008-10-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Make PULSE_JAVA_DIR use srcdir, link
	rt-system.jar to the system rt.jar and include
	com.sun.net.httpserver in rt.jar for jaxws.
	* patches/icedtea-ecj.patch:
	Include rt-system.jar in jaxws compilation bootclasspath
	so java.net and java.util.concurrent classes can be found.
	Add back missing javazic patch.

2008-10-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* rt/netscape/javascript/JSException.java,
	* rt/netscape/javascript/JSObject.java,
	* rt/netscape/javascript/JSProxy.java,
	* rt/netscape/javascript/JSRunnable.java,
	* rt/netscape/javascript/JSUtil.java:
	Removed as moved to plugin.
	* Makefile.am: Fix errors introduced by merge.
	* patches/icedtea-arch.patch,
	* patches/icedtea-ecj.patch: Regenerated.

2008-10-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-6open-6616825.patch,
	* patches/icedtea-6open-6651382.patch,
	* patches/icedtea-6open-6756202.patch:
	Removed.
	* Makefile.am: Remove unneeded backported
	OpenJDK6 patches.
	* patches/icedtea-arch.patch: Rerolled.

2008-10-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-hotspot7-tests.patch: Removed.
	* acinclude.m4: Fix naming of netbeans profiler zip option.
	
2008-10-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Merge from IcedTea6.
	* .hgignore,
	* .hgtags,
	* AUTHORS,
	* ChangeLog,
	* HACKING,
	* INSTALL,
	* IcedTeaPlugin.cc,
	* Makefile.am,
	* NEWS,
	* README,
	* acinclude.m4,
	* configure.ac,
	* fsg.sh,
	* generated/com/sun/corba/se/impl/logging/ActivationSystemException.java,
	* generated/com/sun/corba/se/impl/logging/IORSystemException.java,
	* generated/com/sun/corba/se/impl/logging/InterceptorsSystemException.java,
	* generated/com/sun/corba/se/impl/logging/LogStrings.properties,
	* generated/com/sun/corba/se/impl/logging/NamingSystemException.java,
	* generated/com/sun/corba/se/impl/logging/OMGSystemException.java,