@@ -1,6 +1,11 @@
 2008-10-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
+	Fix location of PulseAudio build output.
+	
+2008-10-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
 	Make PULSE_JAVA_DIR use srcdir, link
 	rt-system.jar to the system rt.jar and include
 	com.sun.net.httpserver in rt.jar for jaxws.
